--- a/src/Club/Views/Users/Top.cshtml
+++ b/src/Club/Views/Users/Top.cshtml
@@ -9,6 +9,7 @@
 
 <div class="row">
     <div style="text-align: center" class="col-md-6 col-md-push-3">
+        <div class="chart"></div>
         @if (first != null)
         {
             <h1><small>1</small> @first.Username</h1>
