--- a/src/Club/Views/Events/Edit.cshtml
+++ b/src/Club/Views/Events/Edit.cshtml
@@ -2,7 +2,7 @@
 @model Club.ViewModels.EventViewModel
 
 @{
-    ViewBag.Title = "Nueva sesión";
+    ViewBag.Title = "Editar sesión";
 
     var term = ViewBag.Term as TermViewModel;
 }
