--- a/src/Club/Views/Announcements/Create.cshtml
+++ b/src/Club/Views/Announcements/Create.cshtml
@@ -34,12 +34,12 @@
     <div class="row">
         <div class="form-group col-md-9">
             <label asp-for="Name"></label>
-            <input asp-for="Name" class="form-control"/>
+            <input asp-for="Name" class="form-control" />
             <span asp-validation-for="Name"></span>
         </div>
         <div class="form-group  col-md-3">
             <label asp-for="IsPrivate"></label>
-            <input asp-for="IsPrivate" class="form-control"/>
+            <input asp-for="IsPrivate" class="form-control" />
         </div>
     </div>
 
@@ -54,7 +54,7 @@
     <div class="row">
         <div class="form-group col-md-12">
             <label asp-for="DueDate"></label>
-            <input asp-for="DueDate" class="form-control"/>
+            <input asp-for="DueDate" class="form-control" />
             <span asp-validation-for="DueDate"></span>
         </div>
     </div>
@@ -76,7 +76,7 @@
     </div>
 
     <div class="form-group">
-        <input type="submit" value="Crear" class="btn btn-success"/>
+        <input type="submit" value="Crear" class="btn btn-success" />
     </div>
 </form>
 
@@ -86,12 +86,16 @@
     <script src="~/lib/moment/min/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
     <script>
+        var d = new Date();
+
         $(function () {
             $('#DueDate').datetimepicker({
                 locale: 'es',
                 stepping: 15,
-                sideBySide:true
+                sideBySide: true,
+                minDate: d
             });
+            $('#DueDate').data("DateTimePicker").minDate(d);
         });
     </script>
 }
